--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "react-native-screens": "~4.11.1",
     "react-native-snackbar": "^2.9.0",
     "react-native-web": "~0.20.0",
-    "react-native-webview": "13.13.5"
+    "react-native-webview": "13.13.5",
+    "expo-navigation-bar": "~5.0.8"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
