--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
     "expo-linking": "~7.1.7",
+    "expo-navigation-bar": "~5.0.8",
     "expo-router": "~5.1.5",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
@@ -42,9 +43,11 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-snackbar": "^2.9.0",
+    "react-native-toast-message": "^2.3.3",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
-    "expo-navigation-bar": "~5.0.8"
+    "expo-av": "~16.0.7",
+    "expo-notifications": "~0.32.11"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
